docs/versioned_docs/version-3.10.0/troubleshooting.mdx
---
sidebar_position: 6
description: Fix common issues when using True Native Bottom Sheet.
keywords: [bottom sheet troubleshooting, fixing bottom sheet, debugging bottom sheet]
---

# Troubleshooting

## Blank Screen When Dismissing React Native Modal on iOS

When presenting a TrueSheet on top of a React Native `<Modal>` and then dismissing the Modal (by setting `visible={false}`), the screen may go blank. This is a bug in React Native where dismissing a Modal that has another view controller presented on top of it only dismisses the topmost view controller, leaving the Modal in an inconsistent state.

**Workaround:**

Dismiss the sheet first before hiding the Modal:

```tsx
const sheet = useRef<TrueSheet>(null)
const [modalVisible, setModalVisible] = useState(false)

const closeModal = async () => {
  await sheet.current?.dismiss()
  setModalVisible(false)
}
```

:::info
A fix has been submitted to React Native. See [PR #55005](https://github.com/facebook/react-native/pull/55005).
:::

## Sheet Snaps Without Animation on Keyboard Dismiss (iOS)

On React Native 0.83+, the sheet snaps back to its detent without animation when the keyboard is dismissed. This is caused by an upstream change in RN 0.83 where `canBecomeFirstResponder` returns `YES` on every `RCTViewComponentView`, disrupting `UISheetPresentationController`'s keyboard avoidance animation.

**Workaround:**

Apply a [patch](https://github.com/lodev09/react-native-true-sheet/blob/main/.yarn/patches/react-native-npm-0.83.4.patch) to `react-native` that gates `canBecomeFirstResponder` behind the `enableImperativeFocus` feature flag. For Yarn, add to your `package.json`:

```json
"resolutions": {
  "react-native": "patch:react-native@npm%3A0.83.4#./.yarn/patches/react-native-npm-0.83.4.patch"
}
```

:::info
A fix has been submitted to React Native. See [PR #55908](https://github.com/facebook/react-native/pull/55908).
:::

## Gesture Handler Not Working on Android

If you're using `react-native-gesture-handler` inside the sheet and gestures are not working on Android, you need to wrap your sheet content with `GestureHandlerRootView`.

```tsx
import { GestureHandlerRootView } from 'react-native-gesture-handler'

<TrueSheet>
  <GestureHandlerRootView style={{ flexGrow: 1 }}>
    {/* Your content with gestures */}
  </GestureHandlerRootView>
</TrueSheet>
```

:::warning
Use `flexGrow: 1` instead of `flex: 1` to avoid layout issues.
:::

[Learn more](https://docs.swmansion.com/react-native-gesture-handler/docs/fundamentals/installation#android) about gesture handler setup on Android.

## Initial Present and Deep Linking

On iOS, `initialDetentIndex` may not work when deep linking to a modal screen from a cold start. When navigating back to the home screen, the sheet won't present because the view wasn't attached to the correct window during the initial render.

**Workaround:**

Use `useFocusEffect` to present the sheet when the screen gains focus, conditioned on whether the initial present failed:

```tsx
import { useFocusEffect } from '@react-navigation/native';
import { useCallback } from 'react';

function HomeScreen() {
  const sheet = useRef<TrueSheet>(null);
  const [didPresent, setDidPresent] = useState(false);

  useFocusEffect(
    useCallback(() => {
      if (!didPresent) {
        sheet.current?.present();
      }
    }, [didPresent])
  );

  return (
    <View>
      <TrueSheet
        ref={sheet}
        initialDetentIndex={0}
        onDidPresent={() => setDidPresent(true)}
      >
        {/* ... */}
      </TrueSheet>
    </View>
  );
}
```

## Weird layout render

The sheet does not have control over how React Native renders components and may lead to rendering issues. To resolve this, try to minimize the use of `flex=1` in your content styles. Instead, use fixed `height` or employ `flexGrow`, `flexBasis`, etc., to manage your layout requirements.

Try moving the sheet component up to a higher level in the component tree as some container may interfere with the sheet's content rendering.

## Xcode and EAS Build Issues

### Xcode Version

The package requires **Xcode 26.1 or later**. Background functionality may not work correctly with older versions. Check your Xcode version:

```sh
xcodebuild -version
```

### EAS Build Configuration

When using [EAS Build](https://docs.expo.dev/build/introduction/), configure your `eas.json` to use a build image with Xcode 26.1+. Use `"image": "latest"` or choose from the [available build images](https://docs.expo.dev/build-reference/infrastructure/#ios-server-images):

```json
{
  "build": {
    "production": {
      "ios": {
        "image": "latest"
      }
    },
    "development": {
      "ios": {
        "image": "latest"
      }
    }
  }
}
```
